[package]
name = "barrage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
